@@ -2313,7 +2313,8 @@ handle_mouse_event(key_info_t key_info, keys_info_t *keys_info)
 
 	int on_tab_line = !cfg.pane_tabs && wenclose(tab_line, e.y, e.x);
 
-	if(wenclose(lwin.win, e.y, e.x) || wenclose(lwin.title, e.y, e.x))
+	if(ui_wenclose(&lwin, lwin.win, e.x, e.y) ||
+			ui_wenclose(&lwin, lwin.title, e.x, e.y))
 	{
 		if(curr_view != &lwin)
 		{
@@ -2321,7 +2322,8 @@ handle_mouse_event(key_info_t key_info, keys_info_t *keys_info)
 			return;
 		}
 	}
-	else if(wenclose(rwin.win, e.y, e.x) || wenclose(rwin.title, e.y, e.x))
+	else if(ui_wenclose(&rwin, rwin.win, e.x, e.y) ||
+			ui_wenclose(&rwin, rwin.title, e.x, e.y))
 	{
 		if(curr_view != &rwin)
 		{
@@ -2334,7 +2336,7 @@ handle_mouse_event(key_info_t key_info, keys_info_t *keys_info)
 		return;
 	}
 
-	if(on_tab_line || wenclose(curr_view->title, e.y, e.x))
+	if(on_tab_line || ui_wenclose(curr_view, curr_view->title, e.y, e.x))
 	{
 		if(!on_tab_line && !cfg.pane_tabs)
 		{
