@@ -11,6 +11,8 @@
 
 	Fixed map menus not listing mappings that accept a selector.
 
+	Fixed handling mouse events in normal and view modes in single pane mode.
+
 0.12.1 to 0.13-beta (2023-03-17)
 
 	Changed implementation of `:compare grouppaths` to juxtapose only files
